--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .front-page {
-  background-image: url("../img/fondo8.jpeg");
+  background-image: url("../img/fondo1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
